--- a/resources/css/dashboard/theme/_custom.css
+++ b/resources/css/dashboard/theme/_custom.css
@@ -1,1 +1,29 @@
-/*.shadow-outline { box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5); }*/
+
+trix-toolbar .trix-button-group button {
+    background-color: white;
+}
+
+
+.overlay-black {
+    position: fixed;
+
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.6);
+
+    transition: all .5s ease;
+}
+
+
+.fixed {
+    position: fixed;
+
+    left: 0;
+    right: 0;
+    width: 100%;
+    overflow-y: scroll;
+}
