feat: added auto fill field (remove storage) && tests

--- a/resources/css/dashboard/theme/_custom.css
+++ b/resources/css/dashboard/theme/_custom.css
@@ -27,3 +27,13 @@ trix-toolbar .trix-button-group button {
     width: 100%;
     overflow-y: scroll;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
